# fastapi-async-realworld

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  c4model.dsl  docker-compose.yml  notes.md  pyproject.toml  readme.md  setup.cfg
.github/workflows/: codeql-analysis.yml
alembic/: env.py
alembic/versions/: 5dd65d07acc9_create_followers_assoc_table.py  8ebc5ea3592e_create_users_table.py  d060eeb7e9d1_create_articles_comments_table.py  df5ed60be29a_create_followers_assoc_table.py  f7cbee279cef_create_tags_table.py
app/: db.py  debug_server.py  main.py
app/api/: api.py  deps.py
app/api/routers/: articles.py  authentication.py  comments.py  profiles.py  tags.py  users.py
app/core/: config.py  security.py
app/crud/: crud_article.py  crud_comment.py  crud_profile.py  crud_tag.py  crud_user.py  users.py
app/schemas/: __init__.py  article.py  comment.py  profile.py  user.py
postman/: README.md  run-api-tests.sh
tests/: conftest.py
tests/api/: test_articles.py  test_comments.py  test_profiles.py  test_tags.py  test_users.py
tests/core/: test_config.py  test_security.py
tests/crud/: test_crud_article.py  test_crud_comment.py  test_crud_profile.py  test_crud_tag.py  test_crud_user.py
tests/utils/: article.py  comment.py  error.py  profile.py  user.py
