[tool.poetry]
name = "fastapi-async-realworld"
version = "0.1.0"
description = "Realworld app API implementation using FastAPI, async SQL database"
authors = ["congdh <congdh2812@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.75.2"
uvicorn = "^0.17.6"
databases = "^0.5.5"
psycopg2-binary = "^2.8.6"
asyncpg = "^0.25.0"
pydantic = {version = "^1.6.1", extras = ["email"]}
python-jose = {version = "^3.2.0", extras = ["cryptography"]}
passlib = "^1.7.2"
bcrypt = "^3.2.0"
alembic = "^1.4.3"
python-slugify = "^4.0.1"
loguru = "^0.6.0"

[tool.poetry.dev-dependencies]
pytest = "^6.0.1"
pytest-cov = "^2.10.1"
pytest-asyncio = "^0.14.0"
httpx = "^0.14.3"
black = {version = "^22.3.0", allow-prereleases = true}
isort = "^5.5.2"
autoflake = "^1.4"
flake8 = "^4.0.1"
mypy = "^0.942"
sqlalchemy-stubs = "^0.3"
pre-commit = "^2.7.1"
bandit = "^1.6.2"
safety = "^1.9.0"
Faker = "^13.6.0"
devtools = {version = "^0.8.0", extras = ["pygments"]}
sqlalchemy-utils = "^0.38.2"
asgi_lifespan = "^1.0.1"
types-python-slugify = "^5.0.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
