[tool.poetry]
name = "fastapi-async-realworld"
version = "0.1.0"
description = "Realworld app API implementation using FastAPI, async SQL database"
authors = ["congdh <congdh2812@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.75.2"
uvicorn = "^0.17.6"
databases = "^0.5.5"
psycopg2-binary = "^2.8.6"
asyncpg = "^0.25.0"
pydantic = {version = "^1.6.1", extras = ["email"]}
python-jose = {version = "^3.2.0", extras = ["cryptography"]}
passlib = "^1.7.2"
bcrypt = "^3.2.0"
alembic = "^1.4.3"
python-slugify = "^4.0.1"
loguru = "^0.6.0"
ruff = "^0.0.290"

[tool.poetry.dev-dependencies]
pytest = "^6.0.1"
pytest-cov = "^2.10.1"
pytest-asyncio = "^0.14.0"
httpx = "^0.14.3"
black = {version = "^22.3.0", allow-prereleases = true}
isort = "^5.5.2"
autoflake = "^1.4"
flake8 = "^4.0.1"
mypy = "^0.942"
sqlalchemy-stubs = "^0.3"
pre-commit = "^2.7.1"
bandit = "^1.6.2"
safety = "^1.9.0"
Faker = "^13.6.0"
devtools = {version = "^0.8.0", extras = ["pygments"]}
sqlalchemy-utils = "^0.38.2"
asgi_lifespan = "^1.0.1"
types-python-slugify = "^5.0.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.ruff]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"docs_src/dependencies/tutorial007.py" = ["F821"]
"docs_src/dependencies/tutorial008.py" = ["F821"]
"docs_src/dependencies/tutorial009.py" = ["F821"]
"docs_src/dependencies/tutorial010.py" = ["F821"]
"docs_src/custom_response/tutorial007.py" = ["B007"]
"docs_src/dataclasses/tutorial003.py" = ["I001"]
"docs_src/path_operation_advanced_configuration/tutorial007.py" = ["B904"]
"docs_src/path_operation_advanced_configuration/tutorial007_pv1.py" = ["B904"]
"docs_src/custom_request_and_route/tutorial002.py" = ["B904"]
"docs_src/dependencies/tutorial008_an.py" = ["F821"]
"docs_src/dependencies/tutorial008_an_py39.py" = ["F821"]
"docs_src/query_params_str_validations/tutorial012_an.py" = ["B006"]
"docs_src/query_params_str_validations/tutorial012_an_py39.py" = ["B006"]
"docs_src/query_params_str_validations/tutorial013_an.py" = ["B006"]
"docs_src/query_params_str_validations/tutorial013_an_py39.py" = ["B006"]

[tool.ruff.isort]
known-third-party = ["fastapi", "pydantic", "starlette"]
